# DRAMSim2

./: .gitignore  AddressMapping.cpp  AddressMapping.h  Bank.cpp  Bank.h  BankState.cpp  BankState.h  BusPacket.cpp  BusPacket.h  CMakeLists.txt  CSVWriter.h  Callback.h  ClockDomain.cpp  ClockDomain.h  CommandQueue.cpp  CommandQueue.h  ConfigIniReader.h  DRAMSim.h  DataPacket.cpp  DataPacket.h  IniReader.cpp  IniReader.h  Makefile  Makefile.am  Makefile.in  MemoryController.cpp  MemoryController.h  MemoryPool.h  MemorySystem.cpp  MemorySystem.h  MultiChannelMemorySystem.cpp  MultiChannelMemorySystem.h  NewAddressMapping.h  PrintMacros.h  README  README.md  README.tex  README.txt  Rank.cpp  Rank.h  (+17 more)
docs/: classes_relationships.dia
example_app/: Makefile  dramsim_test.cpp  dramsim_test.h
ini/: DDR2_micron_16M_8b_x8_sg3E.ini  DDR2_micron_32M_4B_x4_sg3E.ini  DDR2_micron_32M_8B_x4_sg25E.ini  DDR3_micron_16M_8B_x8_sg15.ini  DDR3_micron_32M_8B_x4_sg125.ini  DDR3_micron_32M_8B_x4_sg15.ini  DDR3_micron_32M_8B_x8_sg15.ini  DDR3_micron_32M_8B_x8_sg25E.ini  DDR3_micron_64M_8B_x4_sg15.ini  DDR3_micron_8M_8B_x16_sg15.ini  ST-1.2x.ini  ST-1.5x.ini  ST-2.0x.ini
tests/: AddressMapping.cpp  CommandQueue.cpp  IniReaderTests.cpp  Makefile  RunTests.cpp  StatsDRAMSimInterface.cpp
traces/: traceParse.py
